fix hero section height on mobile size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,7 @@ header.header-visible {
   background-image: url('../images/bg-1.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%;
 }
 
 #hero:before {
@@ -227,6 +228,7 @@ header.header-visible {
   left: 0;
   right: 0;
   z-index: 1;
+  height: 100%;
 }
 
 #hero .hero-container {
